<resources>
    <string name="app_name">PNG</string>
    <string name="personal_center">个人中心</string>
    <string name="home">主页</string>
    <string name="activity_manager">活动管理</string>
    <string name="community">社区</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_register_gender_male">男</string>
    <string name="hint_register_gender_female">女</string>
    <string name="hint_address">地址</string>
    <string name="hint_register_type_company">企业</string>
    <string name="hint_register_type_personal">个人</string>
    <string name="hint_register_gender_none">无</string>
    <string name="btn_register_send_mail">发送验证码</string>
    <string name="btn_register_submit">注册</string>
    <string name="hint_phone_number">电话号码</string>
    <string name="hint_register_profession">职业</string>
    <string name="hint_register_basic_info">基本信息(必填)</string>
    <string name="hint_register_check_code">邮箱验证码</string>
    <string name="hint_register_extension_info">扩展信息(选填)</string>
    <string name="hint_register_type_text">用户类型</string>
    <string name="hint_register_gender_text">性别</string>
    <string name="hint_register_company">公司</string>
    <string name="personal_center_attend_history">参与历史</string>
    <string name="personal_center_organize_history">举办历史</string>
    <string name="personal_center_setting">设置</string>
    <string name="home_page_recommand_activity">推荐活动</string>
    <string name="home_page_recent_activity">最近活动</string>
    <string name="tool_activity_name">活动名称</string>
    <string name="tool_activity_time">活动时间</string>
    <string name="tool_activity_location">活动地点</string>
    <string name="management_organize">发布活动管理</string>
    <string name="management_organize_unpublished">未发布</string>
    <string name="management_organize_published">已发布</string>
    <string name="management_organize_underway">进行中</string>
    <string name="management_attend">参加活动管理</string>
    <string name="management_attend_not_start">未开始</string>
    <string name="management_attend_underway">进行中</string>
    <string name="management_oattend_finish">已结束</string>
    <string name="management_collect">我的收藏</string>
    <string name="personal_center_logout">取消登录</string>
    <string name="auto_login">自动登录</string>
    <string name="remember_password">记住密码</string>
    <string name="btn_check_check_code_confirm">确认验证码</string>
    <string name="show_activity_title">活动标题</string>
    <string name="show_activity_time">时间</string>
    <string name="show_activity_location">地点</string>
    <string name="show_activity_organizer">主办方</string>
    <string name="show_activity_introduction">简介</string>
    <string name="show_activity_files">活动文件</string>
    <string name="attend_activity">参加</string>
    <string name="user_history_attend">参会历史</string>
    <string name="manager_activity_delete">删除</string>
    <string name="manager_activity_view_ticket">查看门票</string>
    <string name="manager_activity_publish">发布</string>
    <string name="manager_activity_detail">查看详情</string>
    <string name="manager_activity_scan">入场扫描</string>
    <string name="management_organize_finished">已结束</string>
    <string name="management_organize_in_check">待审核</string>
    <string name="main">主页</string>
    <string name="activity_info">活动详情</string>
    <string name="collect_activity">收藏</string>
</resources>
