<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.management.MeetingManagerFragment"
    android:background="#ddd">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/management_organize"/>
    <TextView
        android:clickable="true"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personal_center_press_selector"
        android:text="@string/management_organize_unpublished"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ddd"/>
    <TextView
        android:clickable="true"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personal_center_press_selector"
        android:text="@string/management_organize_published"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd"/>
    <TextView
        android:clickable="true"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personal_center_press_selector"
        android:text="@string/management_organize_underway"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/management_attend"/>
        <TextView
            android:clickable="true"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_center_press_selector"
            android:text="@string/management_attend_not_start"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd"/>
        <TextView
            android:clickable="true"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_center_press_selector"
            android:text="@string/management_attend_underway"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ddd"/>
        <TextView
            android:clickable="true"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/personal_center_press_selector"
            android:text="@string/management_oattend_finish"/>
    </LinearLayout>

    <TextView
        android:clickable="true"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/personal_center_press_selector"
        android:text="@string/management_collect"/>

</LinearLayout>