<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hint_register_basic_info"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_username"
            android:hint="@string/hint_username"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_password"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_confirm_password"
            android:inputType="textPassword"
            android:hint="@string/hint_confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/edit_register_email"
            android:hint="@string/hint_email"/>
            </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_register_send_mail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_register_send_mail"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_check_code"
            android:hint="@string/hint_register_check_code"/>

    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_register_check_code_confirm"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_check_check_code_confirm"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_phone_number"
            android:hint="@string/hint_phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:text="@string/hint_register_type_text"/>
        <RadioGroup
            android:id="@+id/radio_register_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:checkedButton="@id/radio_register_type_company"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_register_type_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_register_type_company"/>
            <RadioButton
                android:id="@+id/radio_register_type_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_register_type_personal"/>
        </RadioGroup>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"  />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/hint_register_extension_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:text="@string/hint_register_gender_text"/>
    <RadioGroup
        android:id="@+id/radio_register_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:checkedButton="@id/radio_register_gender_male"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_register_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_register_gender_male"/>
        <RadioButton
            android:id="@+id/radio_register_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_register_gender_female"/>
        <RadioButton
            android:id="@+id/radio_register_gender_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_register_gender_none"/>
    </RadioGroup>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edit_register_address"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_profession"
            android:hint="@string/hint_register_profession"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_register_company"
            android:hint="@string/hint_register_company"/>
    </com.google.android.material.textfield.TextInputLayout>
    <!--调试-->
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_press_selector"
        android:enabled="false"
        android:text="@string/btn_register_submit"/>
</LinearLayout>
</ScrollView>