<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <RelativeLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:id="@+id/manager_activity_list_item_name"
        android:layout_width="150dp"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:text="@string/show_activity_title"/>
    <TextView
        android:padding="5dp"
        android:textSize="10sp"
        android:layout_alignParentRight="true"
        android:id="@+id/manager_activity_list_item_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2019-07-29 7:00" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_margin="5dp"
        android:background="@drawable/btn_manager_delete_selector"
        android:textColor="#fff"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/manager_activity_delete"
        android:text="@string/manager_activity_delete"/>
    <Button
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/manager_activity_view_ticket"
        android:layout_margin="5dp"
        android:textColor="#fff"
        android:background="@drawable/btn_manager_others_selector"
        android:text="@string/manager_activity_view_ticket"/>
    <Button
        android:layout_margin="5dp"
        android:textColor="#fff"
        android:background="@drawable/btn_manager_others_selector"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:id="@+id/manager_activity_publish"
        android:text="@string/manager_activity_publish"/>
    <Button
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        android:textColor="#fff"
        android:background="@drawable/btn_manager_view_more_selector"
        android:id="@+id/manager_activity_detail"
        android:layout_height="match_parent"
        android:text="@string/manager_activity_detail"/>
        <Button
            android:layout_margin="5dp"
            android:textColor="#fff"
            android:background="@drawable/btn_manager_others_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/manager_activity_scan"
            android:layout_height="match_parent"
            android:text="@string/manager_activity_scan"/>
    </LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>