<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity_info.ShowActivityInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:id="@+id/show_activity_logo"
            android:layout_gravity="center"
            android:src="@mipmap/logo"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <TextView
            android:textSize="30sp"
            android:textAlignment="center"
            android:id="@+id/show_activity_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_activity_title"/>
        <TextView
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_activity_time"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="20dp"
                android:id="@+id/show_activity_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2019-07-23 9:00 至 17:00"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_activity_location"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="20dp"
                android:id="@+id/show_activity_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="东南大学九龙湖校区"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_activity_organizer"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="20dp"
                android:id="@+id/show_activity_organizer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="东南大学PNG团队\n东南大学团委"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show_activity_introduction"
            android:textSize="25sp" />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="20dp"
                android:id="@+id/show_activity_introduction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="这是一个主题不明确的会议\n只是看看显示效果"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_activity_files"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/show_activity_file_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
            android:layout_gravity="center"
            android:id="@+id/btn_show_activity_attend"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/attend_activity"
            android:layout_marginRight="5dp"/>
            <Button
                android:layout_marginLeft="5dp"
                android:id="@+id/btn_show_activity_collect"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/collect_activity"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>