<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">
    <ImageView
        android:padding="10dp"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:id="@+id/activity_card_logo"
        android:layout_centerVertical="true"
        tools:src="@mipmap/logo"/>
    <LinearLayout
        android:layout_toRightOf="@id/activity_card_logo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_name"
        tools:text="@string/tool_activity_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_time"
        tools:text="@string/tool_activity_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_location"
        tools:text="@string/tool_activity_location" />
    </LinearLayout>

</RelativeLayout>