<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recycler_recommend_card"
    android:orientation="vertical"
    android:background="@drawable/personal_center_press_selector"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:padding="10dp"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        android:id="@+id/activity_card_logo"
        android:layout_centerVertical="true"
        tools:src="@mipmap/logo"/>
    <LinearLayout
        android:layout_toRightOf="@id/activity_card_logo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
    <TextView
        android:singleLine="true"
        android:ellipsize="marquee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_name"
        tools:text="@string/tool_activity_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_time"
        tools:text="@string/tool_activity_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_card_activty_location"
        tools:text="@string/tool_activity_location" />
    </LinearLayout>

</RelativeLayout>
</com.google.android.material.card.MaterialCardView>